examples/test/testpolicy15984.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15984
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key28: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value12
      podSelector:
        matchLabels:
          key29: value35
          key9: value15
          key23: value16
